# safetensors-ruby

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  safetensors.gemspec
.github/workflows/: build.yml  release.yml
ext/safetensors/: Cargo.toml  extconf.rb
ext/safetensors/src/: lib.rs
lib/: safetensors.rb
lib/safetensors/: numo.rb  torch.rb  version.rb
test/: numo_test.rb  torch_test.rb
