[package]
name = "safetensors-ruby"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.80"
publish = false

[lib]
name = "safetensors"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
memmap2 = "0.5"
safetensors = "=0.7.0"
serde_json = "1"
