[package]
name = "safetensors-ruby"
version = "0.2.2"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.80"
publish = false

[lib]
name = "safetensors"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
memmap2 = "0.9"
rb-sys = "0.9"
safetensors = "=0.8.0"
serde_json = "1"
